--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ img{
     text-decoration: none;
     background-color: rgba(0, 0, 255, 0.623);
     color: white;
+    padding: 2px;
+    border-radius: 5px;
 }
 #form{
     margin: 50px auto;
@@ -106,8 +108,19 @@ footer{
     height: 50px;
     justify-content: center;
 }
-/* .five{
-    position: absolute;
-    right: 15px;
-} */
-
+form
+{
+    border:1px solid black;
+    border-radius:5px;
+    margin: 90px auto;
+    text-align: center;
+    padding: 10px;
+    background-color: azure;
+    width: 70%;
+}
+button{
+    margin: 5px auto;
+}
+#exampleDataList{
+    margin: 15px auto;
+}
